<resources>
    <string name="app_name">My Pantry</string>
    <string name="title_pantry_activity">My Pantry</string>
    <string name="title_login_activity">Login</string>
    <string name="title_register_activity">Sign in</string>
    <string name="title_add_product_activity">Add Product to my Pantry</string>
    <string name="title_add_pantry_activity">Add Product to my Pantry</string>
    <string name="title_remove_pantry_activity">Remove Product to my Pantry</string>


    <!-- Strings related to login and register -->
    <string name="input_email">Email</string>
    <string name="input_name">Name</string>
    <string name="input_last_name">Last Name</string>
    <string name="input_password">Password</string>
    <string name="input_confirm_password">Confirm Password</string>
    <string name="check_remember_me">Remember me?</string>
    <string name="action_login">Login</string>
    <string name="action_sign_up">Sign in</string>


    <!-- Strings related to menu -->
    <string name="menu_home">Home</string>
    <string name="menu_pantry">My Pantry</string>
    <string name="menu_add_product">Add Product</string>
    <string name="menu_remove_product">Remove Product</string>
    <string name="menu_cart">Shopping Cart</string>

    <string name="other_options">Other Options</string>
    <string name="menu_share">Share</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_logout">Log Out</string>


    <!-- Strings related to add or remove product -->
    <string name="input_code">Code</string>
    <string name="input_product_name">Product Name</string>
    <string name="input_brand">Brand</string>
    <string name="input_dear_date">Dear Date</string>
    <string name="action_add_product">Add Product</string>

    <!-- Strings related to add or remove pantry -->
    <string name="input_quality">Quality</string>
    <string name="input_expiration_date">Expiration Date</string>
    <string name="action_add_pantry">Add to my pantry</string>
    <string name="action_remove_pantry">Remove to my pantry</string>

    <!-- String related to scan camera -->
    <string name="scan_message">Por favor, acerqué el código de barra.</string>
    <string name="scan_close">La camara ha sido cerrada.</string>

    <string name="hello_blank_fragment">Hello world</string>

    <!-- Strings related to error message -->
    <string name="error_name_valid">Name is not valid, please try again.</string>
    <string name="error_last_name_valid">Last name is not valid, please try again.</string>
    <string name="error_email_valid">Email is not valid, please try again.</string>
    <string name="error_password_valid">Password is not valid, 6 characters or more, please try again.</string>
    <string name="error_confirm_password_valid">Confirm password is not valid, 6 characters or more, please try again.</string>
    <string name="error_password_equals">Password and confirm password is not equals, please try again.</string>
    <string name="error_register">There was an error when registering.</string>
    <string name="error_login">There was an error when registering.</string>
    <string name="invalid_register">You\'re already signed in!</string>
    <string name="invalid_login">The email or password is incorrect.</string>

    <!-- String related to success message -->
    <string name="valid_register">You have successfully register!</string>
    <string name="valid_login">You have successfully logged in!</string>
</resources>
